# ultrafast_anomaly_detection

./: CMakeLists.txt  README.MD
src/: CMakeLists.txt  anomaly_detection.cpp
src/Utilities/: LibImages.h  comparators.cpp  nfa.cpp  nfa.h  nfa_cufft.cpp
src/Utilities/PartitionTree/: forestManager.cpp  forestManager.h  partitionTree.h  vptree.cpp  vptree.h
src/Utilities/PatchManager/: databasePatchManager.cpp  databasePatchManager.h  databasePatchManager_bk240220.cpp  imagePatchManager.cpp  imagePatchManager.h  imagePatchManager_bk240220.cpp  patchManager.h
src/Utilities/PatchSearch/: localRefinement.cpp  localRefinement.h
src/faisslib/share/faiss/: faiss-targets-release.cmake  faiss-targets.cmake
src/model/: CMakeLists.txt  indexModelImpl.h  indexmodelImpl.cpp  model.h  modelImpl.cpp  modelImpl.h  modelImpl_bk.cpp  params.h
